[package]
authors = ["Jean-Paul Bonnetouche <dev@klaxit.com>"]
description = "Stream and consume data from redis streams."
documentation = "https://docs.rs/redis-stream"
edition = "2018"
homepage = "https://github.com/klaxit/redis-stream-rs"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["redis", "database", "stream", "consumer-groups"]
license = "MIT"
name = "redis-stream"
readme = "README.md"
repository = "https://github.com/klaxit/redis-stream-rs"
version = "0.1.3-a"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
redis = "0.20.0"

[dev-dependencies]
rand = "0.8"
regex = "1.4.1"

[features]
# time ordered consumers
tocs = []
